[package]
name = "nvd_cve"
version = "0.2.0"
edition = "2021"
authors = [
    "Travis Paul <Tr@visPaul.me>",
    "Orhun Parmaksız <orhunparmaksiz@gmail.com>"
]
license = "BSD-2-Clause"
keywords = ["CVE", "NIST", "vulnerability"]
categories = ["command-line-utilities", "caching"]
readme = "README.md"
repository = "https://github.com/travispaul/nvd_cve"
description = "Search for CVEs against a local cached copy of NIST National Vulnerability Database (NVD)."

[dependencies]
home = "0.5.11"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde_json = "1.0.135"
serde = { version = "1.0.217", features = ["derive"] }
flate2 = "1.0.35"
url = "2.5.4"
progress = "0.2"
clap = "2.34"
chrono = "0.4.39"
humansize = "2.1.3"
log = "0.4.22"
env_logger = "0.11.6"

[target.'cfg(unix)'.dependencies]
rusqlite = { version = "0.32.1" }

[target.'cfg(windows)'.dependencies]
rusqlite = { version = "0.32.1", features = ["bundled"] }
